--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- ===== NAVBAR ===== -->
     <nav>
-        <h1>Lunar Latte Café</h1>
-        <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <h1 class="logo">Lunar Latte Café</h1>
+        <div class="nav-links">
+            <a class="active" href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
 
+    <!-- ===== HERO SECTION ===== -->
     <header class="hero">
         <div class="hero-text">
             <h2>Sip Under the Moonlight</h2>
@@ -23,27 +26,36 @@
         </div>
     </header>
 
+    <!-- ===== MENU SECTION ===== -->
     <section id="menu">
         <h2>Our Lunar Specials</h2>
+
         <div class="menu-items">
             <div class="item">
-                <img src="images/latte.jpg">
+                <img src="images/latte.jpg" alt="Latte">
                 <h3>Moonbeam Vanilla Latte</h3>
                 <p>₹180</p>
             </div>
+
             <div class="item">
-                <img src="images/cappuccino.jpg">
+                <img src="images/cappuccino.jpg" alt="Cappuccino">
                 <h3>Cosmic Cappuccino</h3>
                 <p>₹150</p>
             </div>
+
             <div class="item">
-                <img src="images/brownie.jpg">
+                <img src="images/brownie.jpg" alt="Brownie">
                 <h3>Starlit Chocolate Brownie</h3>
                 <p>₹120</p>
             </div>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script>
+        function scrollMenu() {
+            document.getElementById("menu").scrollIntoView({ behavior: "smooth" });
+        }
+    </script>
+
 </body>
 </html>
